--- a/app/src/main/res/drawable/pic_hover_up.xml
+++ b/app/src/main/res/drawable/pic_hover_up.xml
@@ -6,7 +6,7 @@
     </size>
     <gradient
         android:startColor="#000000"
-        android:centerColor="#00000000"
+        android:endColor="#00000000"
         android:type="linear"
         android:angle="270" />
 
