--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#00000000</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ffffff</color>
+    <color name="primary_material_dark_1">#00000000</color>
+    <color name="app_color">#1e88e5</color>
+    <color name="label_text_color">#6b6b6b</color>
+    <color name="error_color">#c01b1b</color>
 </resources>
