--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,35 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/background_material_dark</item>
+    </style>
+
+    <style name="AppTheme_transparent" parent="AppTheme" >
+        <item name="android:textColorPrimary">@color/cardview_light_background</item>
+    </style>
+
+    <style name="My_Material" parent="android:Theme.Material" >
+        <item name="android:colorPrimary">@color/primary_material_dark_1</item>
+        <item name="android:statusBarColor">@color/primary_material_dark_1</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
+        <item name="android:colorBackground">@color/background_material_dark</item>
+        <item name="android:colorAccent">@color/app_color</item>
+        <item name="android:textColorPrimary">@android:color/background_light</item>
+    </style>
+
+    <style name="Black_text_Material" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="android:colorPrimary">@android:color/black</item>
+        <item name="android:statusBarColor">@color/primary_material_dark_1</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
+        <item name="android:colorBackground">@color/background_material_dark</item>
+        <item name="android:colorAccent">@color/accent_material_dark</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="colorAccent">@color/app_color</item>
     </style>
 
 </resources>
