加入userinfo，userprofile，使用icon font

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,5 +63,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/test_btn" />
 
+    <Button
+        android:text="uerprofile"
+        android:id="@+id/test_btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:layout_alignBottom="@+id/test_btn2"
+        android:layout_toEndOf="@+id/test_btn"
+        android:layout_marginStart="21dp" />
+
 
 </RelativeLayout>
