--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -37,11 +37,13 @@
         app:et_labelTextSize="15sp"
         app:et_labelTextColor="@color/label_text_color"
         app:et_supportLines="1"
-        app:et_dividerErrorColor="@color/error_color"
         app:et_supportMaxLines="1"
         app:et_supportMaxChars="16"
-        app:et_supportMode="none"
+        app:et_supportMode="helper"
         app:et_supportSingleLine="true"
+        app:et_supportTextErrorColor="@color/error_color"
+        app:et_dividerColor="@color/app_color"
+        app:et_dividerErrorColor="@color/error_color"
         android:hint="用户名"
         android:textColorHint="#6b6b6b"
         android:layout_width="300dp"
@@ -73,7 +75,9 @@
         app:et_labelEnable="true"
         app:et_labelTextSize="15sp"
         app:et_labelTextColor="@color/label_text_color"
+        app:et_supportTextErrorColor="@color/error_color"
         app:et_supportLines="1"
+        app:et_dividerColor="@color/app_color"
         app:et_dividerErrorColor="@color/error_color"
         app:et_supportMaxLines="1"
         app:et_supportMaxChars="16"
@@ -96,10 +100,12 @@
         app:et_labelTextSize="15sp"
         app:et_labelTextColor="@color/label_text_color"
         app:et_supportLines="1"
+        app:et_supportTextErrorColor="@color/error_color"
+        app:et_dividerColor="@color/app_color"
         app:et_dividerErrorColor="@color/error_color"
         app:et_supportMaxLines="1"
         app:et_supportMaxChars="16"
-        app:et_supportMode="helperWithError"
+        app:et_supportMode="helper"
         app:et_supportSingleLine="true"
         android:hint="确认密码"
         android:textColorHint="#6b6b6b"
