--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ffffff</color>
     <color name="primary_material_dark_1">#00000000</color>
-    <color name="app_color">#1e88e5</color>
+    <color name="app_color">#075ed8</color>
     <color name="label_text_color">#6b6b6b</color>
+    <color name="grey">#d3d3d3</color>
     <color name="error_color">#c01b1b</color>
 </resources>
