--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,8 @@
         <item name="android:statusBarColor">@color/primary_material_dark_1</item>
         <item name="android:windowBackground">@android:color/background_light</item>
         <item name="android:colorBackground">@color/background_material_dark</item>
-        <item name="android:colorAccent">@color/accent_material_dark</item>
+        <item name="android:colorAccent">@color/app_color</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="colorAccent">@color/app_color</item>
     </style>
