--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="zdxh.finder.MainActivity"
-    style="@style/Material">
+    tools:context="zdxh.finder.MainActivity">
 
     <RelativeLayout
         android:id="@+id/banner_layout"
@@ -18,7 +16,8 @@
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:background="@color/app_color"/>
 
 
         <RelativeLayout
@@ -72,6 +71,16 @@
         android:layout_alignBottom="@+id/test_btn2"
         android:layout_toEndOf="@+id/test_btn"
         android:layout_marginStart="21dp" />
+
+    <RelativeLayout
+        android:layout_width="333dp"
+        android:layout_height="140dp"
+        android:background="@drawable/fillet_main"
+        android:elevation="3dip"
+        android:layout_marginTop="180dp"
+        android:layout_centerHorizontal="true">
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
