--- a/app/src/main/res/drawable/pic_hover_down.xml
+++ b/app/src/main/res/drawable/pic_hover_down.xml
@@ -6,7 +6,8 @@
     </size>
     <gradient
         android:startColor="#00000000"
-        android:endColor="#000000"
+        android:centerColor="#00000000"
+        android:endColor="#ffffff"
         android:type="linear"
         android:angle="270" />
 
