--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,15 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/app_color">
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:background="@drawable/rv_item_bg">
+        android:layout_width="333dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/fillet"
+        android:elevation="3dip"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
+
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="#f2f2f2"
+            android:id="@+id/view"
+            android:layout_marginTop="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_ava_small"
+            android:src="@drawable/test"
+            android:layout_width="39dp"
+            android:layout_height="39dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
         <TextView
-            android:text="sdadasd"
+            android:id="@+id/username"
+            android:text="孔二狗"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="6dp"
+            android:layout_alignTop="@+id/user_ava_small"
+            android:layout_toEndOf="@+id/user_ava_small" />
+
+        <TextView
+            android:id="@+id/date_time"
+            android:text="1小时前"
+            android:textSize="12sp"
+            android:textColor="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_alignBottom="@+id/username"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:id="@+id/school"
+            android:text="中山大学新华学院"
+            android:textSize="10sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username"
+            android:layout_alignStart="@+id/username"
+            android:layout_marginStart="12dp" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            app:iiv_icon="ion-university"
+            app:iiv_color="@color/app_color"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_below="@+id/username"
+            android:layout_alignStart="@+id/username" />
+
+        <ImageView
+            android:id="@+id/remark_pic"
+            android:src="@drawable/test"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignTop="@+id/view"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/remark"
+            android:text="大家好，我是孔二狗，这是我的应用，这里只显示两行文字，所以我不能写太多，大概有60多个字......"
+            android:textSize="12sp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="160dp"
+            android:layout_centerHorizontal="true" />
+
+        <com.mikepenz.iconics.view.IconicsTextView
+            android:id="@+id/tag"
+            android:text="{ion-ios-pricetags-outline}#标签1"
+            android:textSize="10sp"
+            android:textColor="@color/app_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/remark"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignStart="@+id/remark" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:id="@+id/comment"
+            app:iiv_icon="ion-compose"
+            app:iiv_color="@color/grey"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_alignBottom="@+id/tag"
+            android:layout_alignEnd="@+id/date_time" />
 
     </RelativeLayout>
 
