--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true">
 
         <com.mikepenz.iconics.view.IconicsImageView
-            app:iiv_icon="@string/gmd_arrow_back"
+            app:iiv_icon="ion-android-arrow-back"
             app:iiv_color="#ffffff"
             android:layout_width="18dp"
             android:layout_height="18dp"
@@ -23,6 +23,7 @@
             android:id="@+id/arrow_back" />
 
         <TextView
+            android:id="@+id/user_info"
             android:text="账户信息"
             android:textColor="#ffffff"
             android:layout_width="wrap_content"
@@ -34,10 +35,11 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/avatar_username"
         android:background="@drawable/fillet"
         android:elevation="3dip"
         android:layout_width="330dp"
-        android:layout_height="120dp"
+        android:layout_height="110dp"
         android:layout_marginTop="71dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
@@ -46,48 +48,217 @@
             android:text="头像"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="31dp"
-            android:layout_marginTop="23dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="27dp"
             android:id="@+id/textView"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
-        <View
-            android:layout_height="1dip"
-            android:layout_width="match_parent"
-            android:background="#f2f2f2"
-            android:id="@+id/view"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:src="@drawable/test"
-            android:id="@+id/avatar_small"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="23dp"
-            app:civ_border_color="@color/grey"
-            app:civ_border_width="1dip"/>
+        <TextView
+            android:text="用户名"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:id="@+id/textView2"
+            android:layout_below="@+id/view"
+            android:layout_alignStart="@+id/textView"/>
 
         <TextView
             android:id="@+id/username"
             android:text="孔二狗"
+            android:textColor="@color/grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView2"
             android:layout_alignBottom="@+id/textView2"
             android:layout_alignStart="@+id/avatar_small" />
 
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="#f2f2f2"
+            android:id="@+id/view"
+            android:layout_below="@+id/avatar_small"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentStart="true" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:src="@drawable/test"
+            android:id="@+id/avatar_small"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="17dp"
+            android:layout_marginTop="12dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:background="@drawable/fillet"
+        android:elevation="3dip"
+        android:layout_width="330dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/avatar_username"
+        android:layout_centerHorizontal="true">
+
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="#f2f2f2"
+            android:layout_marginTop="50dp"
+            android:id="@+id/view2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+        <View
+        android:layout_height="1dip"
+        android:layout_width="match_parent"
+        android:background="#f2f2f2"
+        android:layout_marginTop="100dp"
+        android:id="@+id/view3"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="#f2f2f2"
+            android:layout_marginTop="150dp"
+            android:id="@+id/view4"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+        <View
+            android:layout_height="1dip"
+            android:layout_width="match_parent"
+            android:background="#f2f2f2"
+            android:layout_marginTop="200dp"
+            android:id="@+id/view5"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
         <TextView
-            android:text="用户名"
+            android:text="账号绑定"
+            android:textSize="14sp"
+            android:textColor="@color/grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
-            android:id="@+id/textView2"
-            android:layout_below="@+id/view"
-            android:layout_alignStart="@+id/textView" />
+            android:layout_marginStart="18dp"
+            android:id="@+id/account"
+            android:layout_alignBottom="@+id/view2"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="16dp" />
+
+        <TextView
+            android:text="手机"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:layout_alignBottom="@+id/view3"
+            android:layout_marginStart="48dp"
+            android:layout_marginBottom="16dp" />
+
+        <TextView
+            android:text="微信"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4"
+            android:layout_centerVertical="true"
+            android:layout_alignStart="@+id/textView3" />
+
+        <TextView
+            android:text="QQ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5"
+            android:layout_above="@+id/textView6"
+            android:layout_alignStart="@+id/textView4"
+            android:layout_marginBottom="16dp" />
+
+        <TextView
+            android:text="微博"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            android:layout_below="@+id/view5"
+            android:layout_alignStart="@+id/textView5"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/phone_num"
+            android:text="130****4127"
+            android:textColor="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView3"
+            android:layout_alignBottom="@+id/textView3"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="17dp" />
+
+        <TextView
+            android:id="@+id/wechat"
+            android:text="Wechat"
+            android:textColor="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView4"
+            android:layout_alignBottom="@+id/textView4"
+            android:layout_alignEnd="@+id/phone_num" />
+
+        <TextView
+            android:id="@+id/qq"
+            android:text="未绑定"
+            android:textColor="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView5"
+            android:layout_alignBottom="@+id/textView5"
+            android:layout_alignEnd="@+id/wechat" />
+
+        <TextView
+            android:id="@+id/weibo"
+            android:text="孔二二"
+            android:textColor="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView6"
+            android:layout_alignBottom="@+id/textView6"
+            android:layout_alignEnd="@+id/qq" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            app:iiv_icon="ion-android-phone-portrait"
+            app:iiv_color="@color/app_color"
+            android:layout_alignTop="@+id/textView3"
+            android:layout_marginStart="18dp"
+            android:id="@+id/iconicsImageView" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            app:iiv_icon="@string/faw_weixin"
+            app:iiv_color="#62b900"
+            android:layout_alignBottom="@+id/textView4"
+            android:layout_alignStart="@+id/iconicsImageView"
+            android:id="@+id/iconicsImageView2" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            app:iiv_icon="@string/faw_qq"
+            app:iiv_color="@color/app_color"
+            android:layout_alignTop="@+id/textView5"
+            android:layout_alignStart="@+id/iconicsImageView2"
+            android:id="@+id/iconicsImageView3" />
+
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            app:iiv_icon="@string/faw_weibo"
+            app:iiv_color="#af090b"
+            android:layout_alignBottom="@+id/textView6"
+            android:layout_alignStart="@+id/iconicsImageView3"
+            android:id="@+id/iconicsImageView4" />
 
     </RelativeLayout>
 </RelativeLayout>
