--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -13,14 +13,18 @@
         <item name="android:textColorPrimary">@color/cardview_light_background</item>
     </style>
 
-    <style name="My_Material" parent="android:Theme.Material" >
+    <style name="My_Material" parent="android:Theme.Material">
         <item name="android:colorPrimary">@color/primary_material_dark_1</item>
         <item name="android:statusBarColor">@color/primary_material_dark_1</item>
         <item name="android:windowBackground">@android:color/background_light</item>
         <item name="android:colorBackground">@color/background_material_dark</item>
         <item name="android:colorAccent">@color/app_color</item>
-        <item name="android:textColorPrimary">@android:color/background_light</item>
+        <item name="android:textColorPrimary">@android:color/background_dark</item>
+        <item name="android:textColorPrimaryInverse">@android:color/background_light</item>
+        <item name="android:textColorSecondary">@android:color/background_light</item>
     </style>
+
+
 
     <style name="Black_text_Material" parent="Theme.AppCompat.Light.NoActionBar" >
         <item name="android:colorPrimary">@android:color/black</item>
@@ -29,8 +33,12 @@
         <item name="android:colorBackground">@color/background_material_dark</item>
         <item name="android:colorAccent">@color/app_color</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#171616</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="colorAccent">@color/app_color</item>
+        <item name="android:textColorPrimaryInverse">@android:color/background_dark</item>
+        <item name="android:textColorSecondary">@android:color/background_dark</item>
+        <item name="android:textColorSecondaryInverse">@color/cardview_shadow_start_color</item>
     </style>
 
 </resources>
